build: bump to latest versions of tools and migrate to default 2.1.1 w/ its switch to spotbugs