@@ -1,8 +1,8 @@
-import org.ajoberstar.gradle.git.release.opinion.Strategies
-
 buildscript {
+    ext.kotlin_version = "1.3.31"
     dependencies {
         classpath "net.sf.proguard:proguard-gradle:6.0.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
@@ -11,42 +11,36 @@ plugins {
     id 'groovy'
     id 'maven'
     id 'us.eharning.gradle.defaults' version '2.1.1'
-    id "org.jetbrains.kotlin.jvm"  version '1.2.41'
 }
+
+apply plugin: 'kotlin'
 
 group = 'us.eharning.atomun'
 description = 'Utility library implementing key generation.'
 sourceCompatibility = 1.8
 
-release {
-    // Adds SNAPSHOT strategy to allowed list to be used by Travis-CI
-    versionStrategy Strategies.SNAPSHOT
-}
-
 repositories {
     jcenter()
-    //maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 dependencies {
-    findbugs 'com.google.code.findbugs:findbugs:3.0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     compile 'us.eharning.atomun:atomun-core:0.0.2'
 
     /* NOTE: Using the android version due to intended use, consider replacable w/ 25.0 */
-    compile group: 'com.google.guava', name: 'guava', version: '25.0-android'
-    compile ('com.google.code.findbugs:annotations:3.0.1u2') {
-        force = true
-    }
+    compile group: 'com.google.guava', name: 'guava', version: '27.1-android'
+
+    compile 'net.jcip:jcip-annotations:1.0'
+    compile 'com.github.spotbugs:spotbugs-annotations:4.0.0-beta1'
     compile 'com.google.code.findbugs:jsr305:3.0.2'
 
     compile 'org.bouncycastle:bcprov-jdk15on:1.61'
 
     testCompile 'org.codehaus.groovy:groovy:2.5.7'
-    testCompile 'org.spockframework:spock-core:1.1-groovy-2.4'
+    testCompile 'org.spockframework:spock-core:1.3-groovy-2.5'
     testCompile 'net.trajano.caliper:caliper:1.2.1'
-    testCompile 'org.yaml:snakeyaml:1.21'
+    testCompile 'org.yaml:snakeyaml:1.24'
 }
 
 javadoc {
@@ -55,16 +49,15 @@ javadoc {
 
 apply from: "$rootDir/gradle/maven-publish.gradle"
 
-license {
-    mapping 'kt', 'SLASHSTAR_STYLE'
-}
-
-findbugs {
-    excludeFilter file('gradle/findbugs-exclude.xml')
+test {
+    /* If in JDK 9 or higher, must mark illegal-access as denied */
+    if (JavaVersion.current() > JavaVersion.VERSION_1_8) {
+        jvmArgs('--illegal-access=deny')
+    }
 }
 
 wrapper {
-    gradleVersion = '4.0'
+    gradleVersion = '5.4.1'
 }
 
 /* Sanity check that the minimum class-set is from Java 7 */
